tests/fail/input_byte_str.stderr
error[E0277]: the trait bound `[u8; 1]: AsRef<str>` is not satisfied
 --> $DIR/input_byte_str.rs:2:20
  |
2 |     sscanf::scanf!(b"5", "{}", usize);
  |                    ^^^^
  |                    |
  |                    expected an implementor of trait `AsRef<str>`
  |                    help: consider borrowing here: `&b"5"`
  |
  = note: required because of the requirements on the impl of `AsRef<str>` for `&[u8; 1]`
  = note: required by `as_ref`
